# gol

./: CMakeLists.txt  README.md
Gol/: CMakeLists.txt  Gol2D.cu  Gol_mimir.cu  samplesReader.cpp
Gol/samples/: Diamond.txt  Exploder.txt  Glider.txt  GrowingSpaceship.txt  Gun.txt  Pulsar.txt
Gol3D/: CMakeLists.txt  Gol3D.cu  Gol3D_mimir.cu
